(index) Address broken tests
They are still broken, but less so.